--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        <tr> 
          <td><img src="download.png" alt="Imagem de perfil" height="240" width="200"></td> 
         <td><h1>Pedro H. B. Vieira</h1>
-            <h3>Eletrotécnico</h3>
+            <h2>Eletrotécnico</h2>
             <p><a href="https://www.embraco.com/pt/"> Nidec Global Appliance </a>
             </p></td> 
 </tr> 
@@ -24,12 +24,7 @@
 
  </ul>
  <HR></HR> 
- <h3>Hobbies</h3>
- <ol type="I"> 
-    <li>basquete</li>
-    <li>ler</li>
-    <li>jogar</li>
- </ol>
+ 
 <h3>Habilidades</h3>
  <table cellspacing="10">
 <tr>
@@ -46,9 +41,14 @@
     <td> 💥💥💥💥</td>
 
   </tr>
-
+<hr>
 </table>
- 
+ <hr>
+ <h3>Hobbies</h3>
+ <a href="hobbies.html">Hobbies</a>
+<hr>
+
+
 
 </body>
 </html>
