Apos botar o contato

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
        <tr> 
          <td><img src="download.png" alt="Imagem de perfil" height="240" width="200"></td> 
         <td><h1>Pedro H. B. Vieira</h1>
-            <h2>Eletrotécnico</h2>
-            <p><a href="https://www.embraco.com/pt/"> Nidec Global Appliance </a>
+            <h3>Eletrotécnico</h3>
+            <p>Estagiário Técnico<a href="https://www.embraco.com/pt/"> Nidec Global Appliance </a>
+                <p>R&D Laboratório Elétrico</p>
             </p></td> 
 </tr> 
 </table>
@@ -47,6 +48,8 @@
  <h3>Hobbies</h3>
  <a href="hobbies.html">Hobbies</a>
 <hr>
+<h3>Contato</h3>
+<a href="Contato.html">Contato</a>
 
 
 
