--- a/index.html
+++ b/index.html
@@ -1,57 +1,65 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Meu cv</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
+  <title>Meu cv</title>
 </head>
+
 <body>
-   <table cellspacing="20"> 
-       <tr> 
-         <td><img src="download.png" alt="Imagem de perfil" height="240" width="200"></td> 
-        <td><h1>Pedro H. B. Vieira</h1>
-            <h3>Eletrotécnico</h3>
-            <p>Estagiário Técnico<a href="https://www.embraco.com/pt/"> Nidec Global Appliance </a>
-                <p>R&D Laboratório Elétrico</p>
-            </p></td> 
-</tr> 
-</table>
-<HR></HR>
- <h3> Formação </h3>  
- <ul>
-<li>Ensino Médio - SATC</li>
+  <table cellspacing="20">
+    <tr>
+      <td><img src="download.png" alt="Imagem de perfil" height="240" width="200"></td>
+      <td>
+        <h1>Pedro H. B. Vieira</h1>
+        <h3>Eletrotécnico</h3>
+        <p>Estagiário Técnico<a class="p" href="https://www.embraco.com/pt/"> Nidec Global Appliance </a>
+          <p>R&D Laboratório Elétrico</p>
+        </p>
+      </td>
+    </tr>
+  </table>
+  <HR>
+  </HR>
+  <h3> Formação </h3>
+  <ul>
+    <li>Ensino Médio - SATC</li>
     <li>Técnico em eletrotécnica - SATC </li>
 
- </ul>
- <HR></HR> 
- 
-<h3>Habilidades</h3>
- <table cellspacing="10">
-<tr>
-<td>Inglês</td>
-  <td>💥💥💥💥 </td>
-  <td>Testes de dinamômetro</td>
-  <td>💥💥💥💥</td>
-</tr>
+  </ul>
+  <HR>
+  </HR>
 
-  <tr>
-   <td>Teste de inserção e remoção </td>
-   <td>💥💥💥💥💥 </td>
-    <td> Operação </td>
-    <td> 💥💥💥💥</td>
+  <h3>Habilidades</h3>
+  <table cellspacing="10">
+    <tr>
+      <td>Inglês</td>
+      <td>💥💥💥💥 </td>
+      <td>Testes de dinamômetro</td>
+      <td>💥💥💥💥</td>
+    </tr>
 
-  </tr>
-<hr>
-</table>
- <hr>
- <h3>Hobbies</h3>
- <a href="hobbies.html">Hobbies</a>
-<hr>
-<h3>Contato</h3>
-<a href="Contato.html">Contato</a>
+    <tr>
+      <td>Teste de inserção e remoção </td>
+      <td>💥💥💥💥💥 </td>
+      <td> Operação </td>
+      <td> 💥💥💥💥</td>
+
+    </tr>
+    <hr>
+  </table>
+  <hr>
+  <h3>Hobbies</h3>
+  <a class="h" href="hobbies.html">Hobbies</a>
+  <hr>
+  <h3>Contato</h3>
+  <a href="Contato.html" class="c">Contato</a>
 
 
 
 </body>
+
 </html>
